@@ -1,3 +1,7 @@
+2004-11-29  Sergey V. Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkb.c: preview only makes sense for XKB backend
+
 2004-11-25  Sergey V. Udaltsov <svu@gnome.org>
 
 	* libxklavier 1.12 compatibility
